--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
-    margin: 0;
+    margin: 0 0 15px;
     padding: 0;
-    background-color:darkblue;
+    background-color:gray;
+    font-size: 42px;
 }
